MDEV-12059: Assertion `precision > 0' failed with a window function or window aggregate function

Pass the unsigned flag from the Item_sum to the window function